--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -3,17 +3,50 @@ html {
   font-size: 18px; }
 
 header {
-  background-color: #F1F2F3;
-  padding: 0.2rem;
+  background-color: #464849;
+  padding: 0.5rem;
   position: absolute;
   top: 0;
   right: 0;
   left: 0; }
   header .logo {
-    background-image: url("../../img/logo.svg");
+    background-image: url("../../img/logo--dark.svg");
     background-repeat: no-repeat;
     background-size: 100%;
     height: 1.7rem;
     width: 6rem; }
+
+.content {
+  margin-top: 4rem; }
+  @media all and (min-width: 40em) {
+    .content {
+      padding: 1rem; } }
+  .content .macbook {
+    background-color: #D7D7D9;
+    border-radius: 20px;
+    margin: 0 auto;
+    position: relative;
+    padding-bottom: 60%;
+    width: 90%; }
+    @media all and (min-width: 40em) {
+      .content .macbook {
+        border-radius: 30px; } }
+    @media all and (min-width: 64em) {
+      .content .macbook {
+        padding: 0;
+        height: 30rem;
+        width: 45rem; } }
+
+.icon, .icon--apple {
+  background-size: 100%;
+  background-position: 0 0;
+  background-repeat: no-repeat; }
+
+.icon--apple {
+  background-image: url("../../img/icon--apple.svg");
+  padding: 10%;
+  position: absolute;
+  top: 35%;
+  right: 40%; }
 
 /*# sourceMappingURL=styles.css.map */
