--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -1,4 +1,5 @@
-@import "vendor/normalize.css";
+@import "../scss/vendor/normalize.css";
 
 @import "_partials/_setup";
 @import "_partials/_header";
+@import "_partials/_help";
