--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -1,6 +1,29 @@
-@import url(vendor/normalize.css);
+@import url(../scss/vendor/normalize.css);
+* {
+  box-sizing: border-box; }
+
 html {
-  font-size: 18px; }
+  font-size: 18px;
+  font-family: "Lato", sans-serif; }
+
+.content {
+  overflow: auto; }
+
+.column, .column-third, .column-two-thirds {
+  float: left;
+  padding: 0.5rem;
+  width: 100%; }
+  @media all and (min-width: 55em) {
+    .column, .column-third, .column-two-thirds {
+      padding: 1rem; } }
+
+@media all and (min-width: 55em) {
+  .column-third {
+    width: calc(100% / 3); } }
+
+@media all and (min-width: 55em) {
+  .column-two-thirds {
+    width: calc(200% / 3); } }
 
 header {
   background-color: #464849;
@@ -14,7 +37,8 @@ header {
     background-repeat: no-repeat;
     background-size: 100%;
     height: 1.7rem;
-    width: 6rem; }
+    width: 6rem;
+    float: left; }
 
 .content {
   margin-top: 4rem; }
@@ -60,5 +84,47 @@ header {
   right: 40%; }
   .decal__il--d:hover {
     opacity: .5; }
+
+.image, .help-step .clean-icon {
+  background-repeat: no-repeat;
+  background-size: 100%; }
+
+.header-title {
+  color: #464849;
+  font-weight: 600;
+  margin: 0;
+  text-align: center;
+  text-transform: uppercase; }
+
+.help-step {
+  margin: 0 auto;
+  max-width: 800px; }
+  .help-step .clean-icon {
+    background-image: url("../../img/help-clean.svg");
+    height: 12rem;
+    width: 13rem;
+    margin: 0 auto; }
+    @media all and (min-width: 55em) {
+      .help-step .clean-icon {
+        height: 12rem;
+        width: 100%; } }
+  .help-step .help-header,
+  .help-step .help-details {
+    margin: auto;
+    width: 90%; }
+  .help-step .help-header {
+    margin: 0;
+    font-size: 1rem; }
+    @media all and (min-width: 55em) {
+      .help-step .help-header {
+        margin-top: 3.5rem;
+        width: auto; } }
+  .help-step .help-details {
+    color: rgba(70, 72, 73, 0.7);
+    font-size: 0.9rem;
+    line-height: 1.4rem; }
+    @media all and (min-width: 55em) {
+      .help-step .help-details {
+        margin: 0.8rem 0; } }
 
 /*# sourceMappingURL=styles.css.map */
