--- a/styles/scss/_partials/_header.scss
+++ b/styles/scss/_partials/_header.scss
@@ -8,6 +8,7 @@ header {
     background-repeat: no-repeat;
     background-size: 100%;
     height: 1.7rem; width: 6rem;
+    float: left;
   }
 }
 
