--- a/styles/scss/_partials/_help.scss
+++ b/styles/scss/_partials/_help.scss
@@ -31,7 +31,7 @@
   }
 
   .help-header {
-    margin: 0;
+    margin-bottom: 0.5rem;
     font-size: 1rem;
     @media #{$desktop} {
       margin-top: 3.5rem;
