--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -85,9 +85,16 @@ header {
   .decal__il--d:hover {
     opacity: .5; }
 
-.image, .help-step .clean-icon {
+.image, .help-step .clean-icon, .help-step .trash-icon {
   background-repeat: no-repeat;
-  background-size: 100%; }
+  background-size: 100%;
+  height: 14rem;
+  width: 14rem;
+  margin: 0 auto; }
+  @media all and (min-width: 55em) {
+    .image, .help-step .clean-icon, .help-step .trash-icon {
+      height: 14rem;
+      width: 100%; } }
 
 .header-title {
   color: #464849;
@@ -98,16 +105,13 @@ header {
 
 .help-step {
   margin: 0 auto;
-  max-width: 960px; }
+  max-width: 960px;
+  overflow: auto; }
   .help-step .clean-icon {
-    background-image: url("../../img/help-clean.svg");
-    height: 14rem;
-    width: 14rem;
-    margin: 0 auto; }
-    @media all and (min-width: 55em) {
-      .help-step .clean-icon {
-        height: 14rem;
-        width: 100%; } }
+    background-image: url("../../img/help-clean.svg"); }
+  .help-step .trash-icon {
+    background-image: url("../../img/help-trash.svg");
+    background-position: 1rem 0px; }
   .help-step .help-header,
   .help-step .help-details {
     margin: auto;
