--- a/styles/scss/_partials/_help.scss
+++ b/styles/scss/_partials/_help.scss
@@ -1,6 +1,11 @@
 .image {
   background-repeat: no-repeat;
   background-size: 100%;
+  height: 14rem; width: 14rem;
+  margin: 0 auto;
+  @media #{$desktop} {
+    height: 14rem; width: 100%;
+  }
 }
 
 .header-title {
@@ -13,16 +18,17 @@
 
 .help-step {
   margin: 0 auto;
-
   max-width: 960px;
+  overflow: auto;
   .clean-icon {
     @extend .image;
     background-image: url("../../img/help-clean.svg");
-    height: 14rem; width: 14rem;
-    margin: 0 auto;
-    @media #{$desktop} {
-      height: 14rem; width: 100%;
-    }
+  }
+
+  .trash-icon {
+    @extend .image;
+    background-image: url("../../img/help-trash.svg");
+    background-position: 1rem 0px;
   }
 
   .help-header,
