--- a/styles/scss/_partials/_help.scss
+++ b/styles/scss/_partials/_help.scss
@@ -4,7 +4,7 @@
   height: 14rem; width: 14rem;
   margin: 0 auto;
   @media #{$desktop} {
-    height: 14rem; width: 100%;
+    height: 12rem; width: 100%;
   }
 }
 
@@ -17,18 +17,29 @@
 }
 
 .help-step {
-  margin: 0 auto;
+  background-color: white;
+  box-shadow: 0px 1px 3px rgba(0,0,0,0.1), 0 1px 5px rgba(0,0,0,0.1);
+  margin: 2rem auto;
   max-width: 960px;
   overflow: auto;
+  transition: all 0.2s ease-in-out;
+
+  // &:hover {
+  //   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  // }
+
   .clean-icon {
     @extend .image;
     background-image: url("../../img/help-clean.svg");
+    background-position: 0 -1.7rem;
   }
 
   .trash-icon {
     @extend .image;
     background-image: url("../../img/help-trash.svg");
-    background-position: 1rem 0px;
+    @media #{$desktop} {
+      background-position: 1rem -1.9rem;
+    }
   }
 
   .help-header,
@@ -41,9 +52,26 @@
     margin-bottom: 0.5rem;
     font-size: 1rem;
     @media #{$desktop} {
-      margin-top: 4.5rem;
+      margin-top: 3rem;
       width: auto;
     }
+    &:before {
+      content: "";
+      border-radius: 50px;
+      border: 2px solid #D6D8DE;
+      color: #D6D8DE;
+      cursor: default;
+      display: inline-block;
+      font-size: 0.8rem;
+      font-weight: 600;
+      line-height: 0.5rem;
+      margin-right: 0.5rem;
+      padding: 0.5rem;
+    }
+    &#step-one:before { content: "1"; }
+    &#step-two:before { content: "2"; }
+    &#step-three:before { content: "2"; }
+    &#step-four:before { content: "2"; }
   }
 
   .help-details {
