--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -89,9 +89,10 @@ header {
     opacity: .5; }
 
 .image, .help-step .clean-icon, .help-step .trash-icon {
+  background-position: 0;
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 14rem;
+  height: 12rem;
   width: 14rem;
   margin: 0 auto; }
   @media all and (min-width: 55em) {
@@ -112,10 +113,16 @@ header {
   margin: 2rem auto;
   max-width: 960px;
   overflow: auto;
+  padding-bottom: 1rem;
   transition: all 0.2s ease-in-out; }
+  @media all and (min-width: 55em) {
+    .help-step {
+      padding-bottom: 1rem; } }
   .help-step .clean-icon {
-    background-image: url("../../img/help-clean.svg");
-    background-position: 0 -1.7rem; }
+    background-image: url("../../img/help-clean.svg"); }
+    @media all and (min-width: 55em) {
+      .help-step .clean-icon {
+        background-position: 0 -1.7rem; } }
   .help-step .trash-icon {
     background-image: url("../../img/help-trash.svg"); }
     @media all and (min-width: 55em) {
