--- a/styles/scss/_partials/_help.scss
+++ b/styles/scss/_partials/_help.scss
@@ -1,7 +1,8 @@
 .image {
+  background-position: 0;
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 14rem; width: 14rem;
+  height: 12rem; width: 14rem;
   margin: 0 auto;
   @media #{$desktop} {
     height: 12rem; width: 100%;
@@ -22,7 +23,9 @@
   margin: 2rem auto;
   max-width: 960px;
   overflow: auto;
+  padding-bottom: 1rem;
   transition: all 0.2s ease-in-out;
+  @media #{$desktop} { padding-bottom: 1rem; }
 
   // &:hover {
   //   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -31,7 +34,9 @@
   .clean-icon {
     @extend .image;
     background-image: url("../../img/help-clean.svg");
-    background-position: 0 -1.7rem;
+    @media #{$desktop} {
+      background-position: 0 -1.7rem;
+    }
   }
 
   .trash-icon {
