--- a/styles/scss/_partials/_help.scss
+++ b/styles/scss/_partials/_help.scss
@@ -43,7 +43,15 @@
     @extend .image;
     background-image: url("../../img/help-trash.svg");
     @media #{$desktop} {
-      background-position: 1rem -1.9rem;
+      background-position: 1rem -1.8rem;
+    }
+  }
+
+  .peel-icon {
+    @extend .image;
+    background-image: url("../../img/help-peel.svg");
+    @media #{$desktop} {
+      background-position: 0 -1.5rem;
     }
   }
 
@@ -75,8 +83,8 @@
     }
     &#step-one:before { content: "1"; }
     &#step-two:before { content: "2"; }
-    &#step-three:before { content: "2"; }
-    &#step-four:before { content: "2"; }
+    &#step-three:before { content: "3"; }
+    &#step-four:before { content: "4"; }
   }
 
   .help-details {
