--- a/styles/scss/_partials/_header.scss
+++ b/styles/scss/_partials/_header.scss
@@ -3,6 +3,7 @@ header {
   padding: 0.5rem;
   position: absolute;
   top: 0; right: 0; left: 0;
+
   .logo {
     background-image: url("../../img/logo--dark.svg");
     background-repeat: no-repeat;
@@ -10,6 +11,10 @@ header {
     height: 1.7rem; width: 6rem;
     float: left;
   }
+}
+
+.sale-banner ~ .header {
+  top: 3.3rem;
 }
 
 .content {
