--- a/styles/scss/_partials/_help.scss
+++ b/styles/scss/_partials/_help.scss
@@ -1,14 +1,3 @@
-.image {
-  background-position: 0;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  height: 12rem; width: 14rem;
-  margin: 0 auto;
-  @media #{$desktop} {
-    height: 12rem; width: 100%;
-  }
-}
-
 .header-title {
   color: $gray;
   font-weight: 600;
@@ -18,13 +7,11 @@
 }
 
 .help-step {
-  background-color: white;
-  box-shadow: 0px 1px 3px rgba(0,0,0,0.1), 0 1px 5px rgba(0,0,0,0.1);
+  @extend %card;
   margin: 2rem auto;
   max-width: 960px;
-  overflow: auto;
   padding-bottom: 1rem;
-  transition: all 0.2s ease-in-out;
+  transition: $global-transition;
   @media #{$desktop} { padding-bottom: 1rem; }
 
   // &:hover {
@@ -32,35 +19,27 @@
   // }
 
   .clean-icon {
-    @extend .image;
+    @extend %image;
     background-image: url("../../img/help-clean.svg");
-    @media #{$desktop} {
-      background-position: 0 -1.7rem;
-    }
+    @media #{$desktop} { background-position: 0 -1.7rem; }
   }
 
   .trash-icon {
-    @extend .image;
+    @extend %image;
     background-image: url("../../img/help-trash.svg");
-    @media #{$desktop} {
-      background-position: 1rem -1.8rem;
-    }
+    @media #{$desktop} { background-position: 1rem -1.8rem; }
   }
 
   .apply-icon {
-    @extend .image;
+    @extend %image;
     background-image: url("../../img/help-apply.svg");
-    @media #{$desktop} {
-      background-position: 0 -1.5rem;
-    }
+    @media #{$desktop} { background-position: 1rem -1.4rem; }
   }
 
   .peel-icon {
-    @extend .image;
+    @extend %image;
     background-image: url("../../img/help-peel.svg");
-    @media #{$desktop} {
-      background-position: 0 -1.5rem;
-    }
+    @media #{$desktop} { background-position: 1rem -1.4rem; }
   }
 
   .help-header,
