--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -1,5 +1,7 @@
 @import "../scss/vendor/normalize.css";
 
 @import "_partials/_setup";
+@import "_partials/_extendables";
 @import "_partials/_header";
 @import "_partials/_help";
+@import "_partials/_icons";
