--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,25 +1,36 @@
 @import url(../scss/vendor/normalize.css);
+.header .nav--item {
+  float: left; }
+
 * {
   box-sizing: border-box; }
 
 html {
   font-size: 18px;
-  font-family: "Lato", sans-serif; }
+  font-family: 'Lato', sans-serif; }
 
 body {
   background-color: rgba(214, 216, 222, 0.5); }
 
 a {
-  color: #60B5F0;
+  color: #FFF;
   text-decoration: none;
   font-weight: 600;
-  padding-bottom: 0.2rem;
   transition: all 0.2s ease-in-out; }
   a:hover {
     opacity: .7; }
 
+p a {
+  color: #60B5F0;
+  padding-bottom: 0.2rem; }
+
 header, footer, .content {
   overflow: auto; }
+
+ul, ol {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
 
 footer {
   border-top: 2px solid #D7D7DA;
@@ -29,77 +40,55 @@ footer {
     font-size: 0.8rem;
     opacity: .3; }
 
-.column, .column-third, .column-two-thirds {
+.card, .help-step {
+  background-color: #FFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0 1px 5px rgba(0, 0, 0, 0.1);
+  overflow: auto; }
+
+.column, .column--full, .column--third, .column--two-thirds {
   float: left;
   padding: 0.5rem;
   width: 100%; }
   @media all and (min-width: 55em) {
-    .column, .column-third, .column-two-thirds {
+    .column, .column--full, .column--third, .column--two-thirds {
       padding: 1rem; } }
-
-@media all and (min-width: 55em) {
-  .column-third {
-    width: calc(100% / 3); } }
-
-@media all and (min-width: 55em) {
-  .column-two-thirds {
-    width: calc(200% / 3); } }
-
-.help-step {
-  background-color: white;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0 1px 5px rgba(0, 0, 0, 0.1);
-  overflow: auto; }
-
-.help-step .clean-icon, .help-step .trash-icon, .help-step .apply-icon, .help-step .peel-icon {
-  background-position: 0;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  height: 12rem;
-  width: 14rem;
-  margin: 0 auto; }
   @media all and (min-width: 55em) {
-    .help-step .clean-icon, .help-step .trash-icon, .help-step .apply-icon, .help-step .peel-icon {
-      height: 12rem;
+    .column--full {
       width: 100%; } }
+  @media all and (min-width: 55em) {
+    .column--third {
+      width: calc(100% / 3); } }
+  @media all and (min-width: 55em) {
+    .column--two-thirds {
+      width: calc(200% / 3); } }
 
-header {
+.header {
   background-color: #464849;
   padding: 0.5rem;
   position: absolute;
   top: 0;
   right: 0;
   left: 0; }
-  header .logo {
+  .header--logo {
     background-image: url("../../img/logo--dark.svg");
     background-repeat: no-repeat;
     background-size: 100%;
+    cursor: pointer;
     height: 1.7rem;
     width: 6rem;
     float: left; }
-
-.sale-banner ~ .header {
-  top: 3.3rem; }
-
-.content {
-  margin-top: 4rem; }
-  @media all and (min-width: 40em) {
-    .content {
-      padding: 1rem; } }
-  .content .macbook {
-    background-color: #D6D6DC;
-    border-radius: 20px;
-    margin: 0 auto;
-    position: relative;
-    padding-bottom: 60%;
-    width: 90%; }
-    @media all and (min-width: 40em) {
-      .content .macbook {
-        border-radius: 30px; } }
-    @media all and (min-width: 55em) {
-      .content .macbook {
-        padding: 0;
-        height: 25rem;
-        width: 38rem; } }
+    .header--logo:hover {
+      opacity: .7; }
+  .header .nav {
+    display: inline-block; }
+    .header .nav--item {
+      color: #FFF;
+      display: inline-block;
+      font-size: 0.9rem;
+      font-weight: 400;
+      margin-left: 1rem;
+      text-transform: uppercase;
+      padding: 0.2rem; }
 
 .icon, .icon--apple, .decal__il--d {
   background-size: 100%;
@@ -124,6 +113,39 @@ header {
   right: 40%; }
   .decal__il--d:hover {
     opacity: .5; }
+
+.image, .help-step .clean-icon, .help-step .trash-icon, .help-step .apply-icon, .help-step .peel-icon {
+  background-position: 0;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 12rem;
+  width: 14rem;
+  margin: 0 auto; }
+  @media all and (min-width: 55em) {
+    .image, .help-step .clean-icon, .help-step .trash-icon, .help-step .apply-icon, .help-step .peel-icon {
+      height: 12rem;
+      width: 100%; } }
+
+.content {
+  margin-top: 4rem; }
+  @media all and (min-width: 40em) {
+    .content {
+      padding: 1rem; } }
+  .content .macbook {
+    background-color: #D6D6DC;
+    border-radius: 20px;
+    margin: 0 auto;
+    position: relative;
+    padding-bottom: 60%;
+    width: 90%; }
+    @media all and (min-width: 40em) {
+      .content .macbook {
+        border-radius: 30px; } }
+    @media all and (min-width: 55em) {
+      .content .macbook {
+        padding: 0;
+        height: 25rem;
+        width: 38rem; } }
 
 .header-title {
   color: #464849;
@@ -210,4 +232,4 @@ header {
 .twitter-icon {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="355.797" height="291.215" viewBox="0 0 355.797 291.215"><title>twitter</title><path d="M346.554,5.332c-5.972,17.317-16.088,29.9-30.01,40.251,4.218-.723,8.478-1.262,12.642-2.219,4.366-1,8.668-2.319,12.947-3.662,4.226-1.327,8.387-2.859,13.665-4.675a127.809,127.809,0,0,1-28.009,30.922c-5.863,4.617-8.295,9.147-8.3,16.855-0.049,52.174-18.012,97.964-51.47,137.651C237.951,256.117,199.545,278.242,153.871,287,100.887,297.152,50.663,289.082,3.89,261.6c-1-.589-1.965-1.254-2.919-1.922A7.888,7.888,0,0,1,0,258.309c39.42,3.648,74.5-6.514,106.96-30.575-16.5-.979-30.465-5.613-42.675-14.859A73.205,73.205,0,0,1,38.706,177.62c5.3,0,10.357.015,15.415,0a46.763,46.763,0,0,0,16.235-2.383c-17.489-4.795-31.312-13.071-41.779-26.257-10.593-13.344-15.787-28.655-16.072-46.5,10.375,4.931,20.634,8.5,32.255,8.949C12.3,84.354,5.111,51.983,22.32,13.71c3.452,1.669,4.748,4.5,6.712,6.658C56.707,50.811,90.249,71.858,129.88,82.961a209.838,209.838,0,0,0,41.7,7.079c3.691,0.265,2.708-1.562,2.346-3.632-3.594-20.552.649-39.5,12.91-56.243C199.768,12.506,217.345,2.322,239.383.344Q272.9-2.665,297.2,20.616c2.343,2.247,4.593,2.057,7.3,1.447C319.045,18.784,332.65,13.111,346.554,5.332Z" style="fill:%235fa9dd"/></svg>'); }
 
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=index.css.map */
