--- a/styles/scss/_partials/_extendables.scss
+++ b/styles/scss/_partials/_extendables.scss
@@ -1,10 +1,4 @@
-%card {
-  background-color: white;
-  box-shadow: 0px 1px 3px rgba(0,0,0,0.1), 0 1px 5px rgba(0,0,0,0.1);
-  overflow: auto;
-}
-
-%image {
+.image {
   background-position: 0;
   background-repeat: no-repeat;
   background-size: 100%;
