--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -1,6 +1,12 @@
 @import "../scss/vendor/normalize.css";
 
-@import "_partials/_setup";
+@import "variables";
+@import "utilities";
+@import "base";
+@import "modules";
+@import "layout";
+@import "state";
+
 @import "_partials/_extendables";
 @import "_partials/_header";
 @import "_partials/_help";
