--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -8,5 +8,8 @@ $global-transition: all 0.2s ease-in-out;
 $c-white: #FFF;
 $c-black: #000;
 $c-gray: #464849;
+
 $c-twitter: #60B5F0;
 $c-etsy: #F47E28;
+
+$c-blue: #4DA1D9;
