--- a/styles/scss/modules/_card.scss
+++ b/styles/scss/modules/_card.scss
@@ -1,5 +1,27 @@
 .card {
   background-color: $c-white;
   box-shadow: 0px 1px 3px rgba(0,0,0,0.1), 0 1px 5px rgba(0,0,0,0.1);
+  display: block;
+  margin: auto;
   overflow: auto;
+
+  &--square {
+    height: 15rem; width: 15rem;
+  }
+
+  &--footer {
+    @extend .absolute;
+    background-color: $c-gray;
+    padding: 0.8rem 0;
+    text-align: center;
+    bottom: 0; left: 0; right: 0;
+    transition: $global-transition;
+
+    h3 {
+      color: $c-white;
+      font-size: 1.2rem;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+  }
 }
