--- a/styles/scss/modules/_header.scss
+++ b/styles/scss/modules/_header.scss
@@ -20,7 +20,7 @@
     display: inline-block;
 
     &--item {
-      @extend %float-left;
+      @extend .float-left;
       color: $c-white;
       display: inline-block;
       font-size: 0.9rem;
