Added stickers page

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -1,3 +1,6 @@
+@import "../../bower_components/dashing/sass/base/base";
+@import "../../bower_components/dashing/sass/modules/modules";
+
 @import "../scss/vendor/normalize.css";
 
 @import "variables";
