--- a/styles/scss/_modules.scss
+++ b/styles/scss/_modules.scss
@@ -1,5 +1,6 @@
 @import "modules/card";
 @import "modules/column";
 @import "modules/header";
+@import "modules/actions";
 @import "modules/icon";
 @import "modules/illustration";
