--- a/styles/scss/modules/_card.scss
+++ b/styles/scss/modules/_card.scss
@@ -1,5 +1,7 @@
 .card {
-  background-color: $c-white;
+  background-color: $white;
+  border: none;
+  border-radius: 0;
   box-shadow: 0px 1px 3px rgba(0,0,0,0.1), 0 1px 5px rgba(0,0,0,0.1);
   display: block;
   margin: auto;
@@ -9,19 +11,27 @@
     height: 15rem; width: 15rem;
   }
 
-  &--footer {
+  .card--footer {
     @extend .absolute;
-    background-color: $c-gray;
+    background-color: $gray;
     padding: 0.8rem 0;
     text-align: center;
     bottom: 0; left: 0; right: 0;
     transition: $global-transition;
 
     h3 {
-      color: $c-white;
+      color: $white;
       font-size: 1.2rem;
       text-transform: uppercase;
       letter-spacing: 1px;
     }
   }
+}
+
+.card-title {
+  display: block;
+  padding: 0.5rem;
+  overflow: auto;
+  background-color: #d7d7da;
+  p { margin: 0.5rem 0 0 0.5rem; }
 }
