--- a/styles/scss/modules/_header.scss
+++ b/styles/scss/modules/_header.scss
@@ -18,12 +18,13 @@
 
   .nav {
     display: inline-block;
+    float: left;
 
     &--item {
       @extend .float-left;
       color: $c-white;
       display: inline-block;
-      font-size: 0.9rem;
+      font-size: 1rem;
       font-weight: 400;
       margin-left: 1rem;
       text-transform: uppercase;
