--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -28,4 +28,11 @@
   }
 }
 
+.section-header {
+  color: $c-gray;
+  font-weight: 700;
+  margin-top: 5rem;
+  margin-bottom: 1.5rem;
+}
+
 #footer { }
