--- a/styles/scss/modules/_card.scss
+++ b/styles/scss/modules/_card.scss
@@ -9,21 +9,78 @@
 
   &--square {
     height: 15rem; width: 15rem;
+    .card--footer {
+      @extend .absolute;
+      background-color: $gray;
+      padding: 0.8rem 0;
+      text-align: center;
+      bottom: 0; left: 0; right: 0;
+      transition: $global-transition;
+
+      h3 {
+        color: $white;
+        font-size: 1.2rem;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+      }
+    }
   }
 
-  .card--footer {
-    @extend .absolute;
-    background-color: $gray;
-    padding: 0.8rem 0;
-    text-align: center;
-    bottom: 0; left: 0; right: 0;
-    transition: $global-transition;
+  &--review {
+    display: inline-block;
+    height: 23rem;
+    width: 16rem;
+    .card--content {
+      display: flex;
+      flex-flow: column;
+      flex-grow: 1;
+    }
+  }
 
-    h3 {
-      color: $white;
-      font-size: 1.2rem;
-      text-transform: uppercase;
-      letter-spacing: 1px;
+  .review-image {
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 10rem;
+    width: 100%;
+    &.instagram_lizelleg {
+      background-image: url("../../img/reviews/instagram_lizelleg.jpg");
+      background-position: 0 -3.5rem;
+    }
+  }
+
+  .review-author,
+  .review-text {
+    line-height: 1.2rem;
+    margin: 0;
+
+    .text-instagram, &.text-instagram { color: $c-instagram; }
+    .text-twitter, &.text-twitter { color: $c-twitter; }
+    .text-etsy, &.text-etsy { color: $c-etsy; }
+  }
+  .review-text { font-size: 0.8rem; }
+  .review-author {
+    font-size: 0.9rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+  }
+
+  .review-link {
+    @extend .card;
+    @extend .is-selectable;
+    border-radius: 5px;
+    display: inline-block;
+    font-size: 0.7rem;
+    line-height: 1.1rem;
+    margin-top: 0.7rem;
+    padding: 0.3rem 0.5rem 0.3rem 0.3rem;
+    .link-logo {
+      background-repeat: no-repeat;
+      background-size: 100%;
+      float: left;
+      height: 20px;
+      margin-right: 0.2rem;
+      width: 20px;
+      &.instagram-logo { background-image: url("../../img/reviews/instagram-logo.png"); }
     }
   }
 }
