--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2016,7 +2016,10 @@ footer {
         text-transform: uppercase;
         letter-spacing: 1px; }
   .card--review {
-    display: inline-block;
+    display: flex;
+    flex-flow: column;
+    float: left;
+    margin-right: 2rem;
     height: 23rem;
     width: 16rem; }
     .card--review .card--content {
@@ -2036,23 +2039,35 @@ footer {
   .help-step .review-text {
     line-height: 1.2rem;
     margin: 0; }
-    .card .review-author .text-instagram, .help-step .review-author .text-instagram, .card .review-author.text-instagram, .help-step .review-author.text-instagram,
+    .card .review-author .text-instagram, .help-step .review-author .text-instagram, .card .review-author.text-instagram, .help-step .review-author.text-instagram, .card .review-author .text-instagram a, .help-step .review-author .text-instagram a, .card .review-author.text-instagram a, .help-step .review-author.text-instagram a,
     .card .review-text .text-instagram,
     .help-step .review-text .text-instagram,
     .card .review-text.text-instagram,
-    .help-step .review-text.text-instagram {
+    .help-step .review-text.text-instagram,
+    .card .review-text .text-instagram a,
+    .help-step .review-text .text-instagram a,
+    .card .review-text.text-instagram a,
+    .help-step .review-text.text-instagram a {
       color: #EF9B48; }
-    .card .review-author .text-twitter, .help-step .review-author .text-twitter, .card .review-author.text-twitter, .help-step .review-author.text-twitter,
+    .card .review-author .text-twitter, .help-step .review-author .text-twitter, .card .review-author.text-twitter, .help-step .review-author.text-twitter, .card .review-author .text-twitter a, .help-step .review-author .text-twitter a, .card .review-author.text-twitter a, .help-step .review-author.text-twitter a,
     .card .review-text .text-twitter,
     .help-step .review-text .text-twitter,
     .card .review-text.text-twitter,
-    .help-step .review-text.text-twitter {
+    .help-step .review-text.text-twitter,
+    .card .review-text .text-twitter a,
+    .help-step .review-text .text-twitter a,
+    .card .review-text.text-twitter a,
+    .help-step .review-text.text-twitter a {
       color: #60B5F0; }
-    .card .review-author .text-etsy, .help-step .review-author .text-etsy, .card .review-author.text-etsy, .help-step .review-author.text-etsy,
+    .card .review-author .text-etsy, .help-step .review-author .text-etsy, .card .review-author.text-etsy, .help-step .review-author.text-etsy, .card .review-author .text-etsy a, .help-step .review-author .text-etsy a, .card .review-author.text-etsy a, .help-step .review-author.text-etsy a,
     .card .review-text .text-etsy,
     .help-step .review-text .text-etsy,
     .card .review-text.text-etsy,
-    .help-step .review-text.text-etsy {
+    .help-step .review-text.text-etsy,
+    .card .review-text .text-etsy a,
+    .help-step .review-text .text-etsy a,
+    .card .review-text.text-etsy a,
+    .help-step .review-text.text-etsy a {
       color: #F47E28; }
   .card .review-text, .help-step .review-text {
     font-size: 0.8rem; }
@@ -2062,8 +2077,10 @@ footer {
     margin-bottom: 0.5rem; }
   .card .review-link, .help-step .review-link {
     border-radius: 5px;
+    color: #000000;
     display: inline-block;
     font-size: 0.7rem;
+    font-weight: 400;
     line-height: 1.1rem;
     margin-top: 0.7rem;
     padding: 0.3rem 0.5rem 0.3rem 0.3rem; }
@@ -2197,6 +2214,15 @@ footer {
       .img.img--bb8 ~ .card-title p {
         color: #FFFFFF; }
 
+.hero {
+  background-color: #FFFFFF;
+  background-repeat: no-repeat;
+  background-position: center 3rem;
+  background-image: url("../../img/il_shop.svg");
+  border-bottom: 3px solid #BABABA;
+  height: 258px;
+  width: 100%; }
+
 .content {
   margin: 4rem auto;
   max-width: 920px; }
@@ -2222,8 +2248,7 @@ footer {
 .section-header {
   color: #464849;
   font-weight: 700;
-  margin-top: 5rem;
-  margin-bottom: 1.5rem; }
+  margin-top: 5rem; }
 
 .card--is-selectable {
   cursor: pointer;
