aligned flex-row to header

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2248,7 +2248,18 @@ footer {
 .section-header {
   color: #464849;
   font-weight: 700;
-  margin-top: 5rem; }
+  margin-top: 1rem; }
+
+.flex-row {
+  padding-left: 1rem;
+  width: 100%;
+  overflow-x: scroll; }
+  @media screen and (min-width: 1200px) {
+    .flex-row {
+      padding-left: calc(50% - (1200px/2) + 1.2rem); } }
+
+.column--review {
+  width: calc(100% + (288px * 5)); }
 
 .card--is-selectable {
   cursor: pointer;
