--- a/styles/scss/modules/_card.scss
+++ b/styles/scss/modules/_card.scss
@@ -54,6 +54,10 @@
       background-image: url("../../img/reviews/instagram_shekira.jpg");
       background-position: 0 -4.5rem;
     }
+    &.twitter_coryclubb {
+      background-image: url("../../img/reviews/twitter_coryclubb.jpg");
+      background-position: 0 -7.7rem;
+    }
     &.twitter_uxjw {
       background-image: url("../../img/reviews/twitter_uxjw.jpg");
       background-position: 0 -5.5rem;
