add touch scrolling

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2264,6 +2264,7 @@ footer {
   margin-top: 1rem; }
 
 .flex-row {
+  -webkit-overflow-scrolling: touch;
   display: flex;
   height: 25rem;
   overflow-x: auto;
