--- a/styles/scss/modules/_card.scss
+++ b/styles/scss/modules/_card.scss
@@ -62,6 +62,10 @@
       background-image: url("../../img/reviews/twitter_uxjw.jpg");
       background-position: 0 -5.5rem;
     }
+    &.twitter_aliabbasjaffri {
+      background-image: url("../../img/reviews/twitter_aliabbasjaffri.jpg");
+      background-position: 0 -0.8rem;
+    }
   }
 
   .review-author,
