--- a/styles/scss/modules/_header.scss
+++ b/styles/scss/modules/_header.scss
@@ -1,6 +1,6 @@
 .header {
   background-color: $c-gray;
-  padding: 0.5rem;
+  padding: 0.5rem 0;
   position: absolute;
   top: 0; right: 0; left: 0;
 
