--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2016,11 +2016,12 @@ footer {
         text-transform: uppercase;
         letter-spacing: 1px; }
   .card--review {
+    border-radius: 6px;
     display: flex;
     flex: 0 0 auto;
     flex-flow: column;
     float: left;
-    margin-right: 2rem;
+    margin-right: 1.5rem;
     height: 23rem;
     width: 16rem; }
     .card--review .card--content {
@@ -2230,14 +2231,59 @@ footer {
       .img.img--bb8 ~ .card-title p {
         color: #FFFFFF; }
 
+.hero--macbook {
+  background-image: url("../../img/slate-background.jpg");
+  background-repeat: repeat;
+  height: calc(100vh - 258px);
+  min-height: 430px;
+  max-height: 500px;
+  position: relative; }
+  .hero--macbook:before {
+    content: "";
+    background-color: #464849;
+    opacity: .7;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0; }
+  .hero--macbook .macbook {
+    background-color: #87878c;
+    border-radius: 20px;
+    height: 350px;
+    width: 560px;
+    position: relative;
+    top: calc(50% - (350px / 2));
+    left: calc(50% - (560px / 2)); }
+    .hero--macbook .macbook:before {
+      content: "";
+      background-image: url("../../img/apple-logo.png");
+      background-size: 100%;
+      height: 120px;
+      width: 120px;
+      position: absolute;
+      top: calc(50% - (120px / 2));
+      left: calc(50% - (120px / 2)); }
+    .hero--macbook .macbook .sticker {
+      background-size: 100%;
+      height: 100px;
+      width: 100px;
+      position: relative;
+      top: calc(50% - (100px / 2));
+      left: calc(50% - (100px / 2)); }
+      .hero--macbook .macbook .sticker.sticker--illinois {
+        background-image: url("../../img/stickers/illinois_sticker.png");
+        top: calc(50% - (100px / 2) + 6px); }
+
 .hero {
-  background-color: #FFFFFF;
   background-repeat: no-repeat;
-  background-position: center 3rem;
-  background-image: url("../../img/il_shop.svg");
-  border-bottom: 3px solid #BABABA;
-  height: 258px;
   width: 100%; }
+  .hero.hero--home {
+    background-color: #FFFFFF;
+    background-position: center 3rem;
+    background-image: url("../../img/il_shop.svg");
+    border-bottom: 3px solid #BABABA;
+    height: 258px; }
 
 .content {
   margin: 4rem auto;
