--- a/styles/scss/modules/_card.scss
+++ b/styles/scss/modules/_card.scss
@@ -27,11 +27,12 @@
   }
 
   &--review {
+    border-radius: 6px;
     display: flex;
     flex: 0 0 auto;
     flex-flow: column;
     float: left;
-    margin-right: 2rem;
+    margin-right: 1.5rem;
     height: 23rem;
     width: 16rem;
     .card--content {
