--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2201,7 +2201,7 @@ footer {
     opacity: .5; }
 
 .il-shop {
-  background-image: url("../../img/il_shop.svg");
+  background-image: url("../../img/storefront.svg");
   background-size: 100%;
   height: 12rem; }
 
@@ -2281,10 +2281,11 @@ footer {
   width: 100%; }
   .hero.hero--home {
     background-color: #FFFFFF;
-    background-position: center 3rem;
-    background-image: url("../../img/il_shop.svg");
+    background-position: center;
+    background-size: cover;
+    background-image: url("../../img/storefront.svg");
     border-bottom: 3px solid #BABABA;
-    height: 258px; }
+    height: 280px; }
 
 .content {
   margin: 4rem auto;
