--- a/styles/scss/modules/_illustration.scss
+++ b/styles/scss/modules/_illustration.scss
@@ -1,5 +1,5 @@
 .il-shop {
-  background-image: url("../../img/il_shop.svg");
+  background-image: url("../../img/storefront.svg");
   background-size: 100%;
   height: 12rem;
 }
